--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby-plugin-styled-components": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "rebass": "^4.0.7",
+    "styled-components": "^5.3.6",
+    "styled-icons": "^10.46.0"
   }
 }
